<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:fillViewport="true"
    >

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            tools:context="com.sam_chordas.android.stockhawk.ui.MyStockDetailActivity">

            <TextView
                android:id="@+id/stock_heading"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Large Text"
                android:textAppearance="?android:attr/textAppearanceLarge"/>

            <ImageView
                android:id="@+id/stock_image"
                android:layout_width="match_parent"
                android:layout_height="300dp"
                android:layout_marginTop="8dp"
                android:contentDescription="@string/image_description"
                android:scaleType="fitXY"
                android:src="@drawable/placeholder"
                android:padding="8dp"
                />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:gravity="center_horizontal"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/button1d"
                    style="?android:attr/buttonStyleSmall"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="-8dp"
                    android:layout_weight="0.14"
                    android:paddingLeft="0dp"
                    android:paddingRight="0dp"
                    android:text="@string/button1d"/>

                <Button
                    android:id="@+id/button5d"
                    style="?android:attr/buttonStyleSmall"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="-8dp"
                    android:layout_weight="0.14"
                    android:paddingLeft="0dp"
                    android:paddingRight="0dp"
                    android:text="@string/button5d"/>

                <Button
                    android:id="@+id/button3m"
                    style="?android:attr/buttonStyleSmall"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="-8dp"
                    android:layout_weight="0.14"
                    android:paddingLeft="0dp"
                    android:paddingRight="0dp"
                    android:text="@string/button3m"/>

                <Button
                    android:id="@+id/button6m"
                    style="?android:attr/buttonStyleSmall"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="-8dp"
                    android:layout_weight="0.14"
                    android:paddingLeft="0dp"
                    android:paddingRight="0dp"
                    android:text="@string/button6m"/>

                <Button
                    android:id="@+id/button1y"
                    style="?android:attr/buttonStyleSmall"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="-8dp"
                    android:layout_weight="0.14"
                    android:paddingLeft="0dp"
                    android:paddingRight="0dp"
                    android:text="@string/button1y"/>

                <Button
                    android:id="@+id/button2y"
                    style="?android:attr/buttonStyleSmall"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="-8dp"
                    android:layout_weight="0.14"
                    android:paddingLeft="0dp"
                    android:paddingRight="0dp"
                    android:text="@string/button2y"/>

                <Button
                    android:id="@+id/button"
                    style="?android:attr/buttonStyleSmall"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="-8dp"
                    android:layout_weight="0.14"
                    android:paddingLeft="0dp"
                    android:paddingRight="0dp"
                    android:text="@string/buttonmax"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:orientation="horizontal"
                android:baselineAligned="false">

                <TableLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.5"
                    android:paddingLeft="16dp"
                    android:paddingRight="16dp"
                    android:stretchColumns="1">

                    <TableRow>

                        <TextView
                            android:text="@string/last_label"/>

                        <TextView
                            android:id="@+id/lastprice"
                            android:layout_gravity="end"/>
                    </TableRow>

                    <View
                        android:layout_height="1dip"
                        android:layout_marginBottom="8dp"
                        android:layout_marginTop="8dp"
                        android:background="#FF909090"/>

                    <TableRow>

                        <TextView
                            android:text="@string/high_label"/>

                        <TextView
                            android:id="@+id/highprice"
                            android:layout_gravity="end"/>
                    </TableRow>

                    <View
                        android:layout_height="1dip"
                        android:layout_marginBottom="8dp"
                        android:layout_marginTop="8dp"
                        android:background="#FF909090"/>

                    <TableRow>

                        <TextView
                            android:text="@string/cap_label"/>

                        <TextView
                            android:id="@+id/marketcap"
                            android:layout_gravity="end"/>
                    </TableRow>

                    <View
                        android:layout_height="1dip"
                        android:layout_marginBottom="8dp"
                        android:layout_marginTop="8dp"
                        android:background="#FF909090"/>

                    <TableRow>

                        <TextView
                            android:text="@string/open_label"/>

                        <TextView
                            android:id="@+id/openprice"
                            android:layout_gravity="end"/>
                    </TableRow>

                    <View
                        android:layout_height="1dip"
                        android:layout_marginBottom="8dp"
                        android:layout_marginTop="8dp"
                        android:background="#FF909090"/>

                    <TableRow>

                        <TextView
                            android:text="@string/low_label"/>

                        <TextView
                            android:id="@+id/lowprice"
                            android:layout_gravity="end"/>
                    </TableRow>

                    <View
                        android:layout_height="1dip"
                        android:layout_marginBottom="8dp"
                        android:layout_marginTop="8dp"
                        android:background="#FF909090"/>

                    <TableRow>

                        <TextView
                            android:text="@string/volume_label"/>

                        <TextView
                            android:id="@+id/volume"
                            android:layout_gravity="end"/>
                    </TableRow>
                </TableLayout>
            </LinearLayout>

        </LinearLayout>
    </ScrollView>
</FrameLayout>